--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -205,7 +205,7 @@
  TUR_committees_of_resistance_patrol_desc: "Committees of Resistance are patrolling the streets looking for unpatriotic activity"
  TUR_committees_of_production_for_factories: "Committees of Production"
  TUR_committees_of_production_for_factories_desc: "Committees of Production are supervising and controlling our factories"
- TUR_homeland_defence: "Adherent Defence"
+ TUR_homeland_defence: "Adherent Defense"
  TUR_homeland_defence_desc: "Our military is focused on the defense of the homeland and it is not to be used in capitalistic imperialist agenda"
  METO_member: "METO Member"
  METO_member_desc: "This country is a member of METO (Middle Eastern Treaty Organization), a Middle Eastern equivalent of NATO headed by Turkey"
@@ -214,7 +214,24 @@
  TUR_minority_government: "Minority Government"
  TUR_minority_government_desc: "Our government currently doesn't hold a majority of the parliament seats, making decision making very difficult"
  #Tooltips
- TUR_PKK_COMMENCE_VAN_TT: "£decision_icon_small §YUnlocks§! Additional §YDecisions§! for Operations in Van"
+ TUR_PKK_DAMAGE_1000_TT: "Eliminating §H1000§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_900_TT: "Eliminating §H900§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_800_TT: "Eliminating §H800§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_700_TT: "Eliminating §H700§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_600_TT: "Eliminating §H600§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_500_TT: "Eliminating §H500§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_400_TT: "Eliminating §H400§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_300_TT: "Eliminating §H300§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_200_TT: "Eliminating §H200§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_100_TT: "Eliminating §H100§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_50_TT: "Eliminating §H50§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_25_TT: "Eliminating §H10§! §HPKK Insurgents§!"
+ TUR_effectiveness_req_TT: "§HEffectiveness§! is §H80%§! or less"
+ TUR_effectiveness_req2_TT: "§HEffectiveness§! is §H10%§! or more"
+ TUR_20_effectiveness_TT: "Increases our §HEffectiveness§! by §H10%§!"
+ TUR_effectiveness_TT: "Evaluates §YEffectiveness§! based on:\nLevel of §YAirports§! in State\nLevel of §YRadars§! in State\nLevel of §YForts§! in Target City ([ROOT.TUR_PKK_bases_name])\n§YHigher is Better§!"
+ TUR_PKK_COMMENCE_VAN_TT: "£decision_icon_small §YUnlocks§! §YDecisions§! for Operations in Van"
+ TUR_SELECT_VAN_TT: "Selects §HVan§! as Target Base"
  TUR_PKK_TT: "£decision_icon_small §YUnlocks§! Additional §YDecisions§! for Phase I: Trouble in Kurdistan"
  TUR_ottomans_time: "We can bring the §HHouse of Osman§! into power, and the focus tree will be made available."
  TUR_mafia_increase_1: "§HMafia influence§! §Rincreases by 1§!"
@@ -1099,9 +1116,15 @@
  TUR_domestic_politics_category: "Turkish Domestic Politics"
  TUR_economy_category: "Economic Crisis"
  TUR_pkk_insurgency_category: "Phase I: Trouble in Kurdistan"
- TUR_pkk_insurgency_category_desc: "\n£TUR_desctext_PKK\n\n\n\n\nThe £TUR_Neutral_Communism  §HPKK§! first began their attacks in the late 70's, and ever since, have persisted in their efforts of gaining autonomy or out-right independence from our nation. The £TUR_Neutral_Communism  §YPKK§! have spread their movement to neighboring states, destabilizing our neighbors, and creating a need for closer cooperation.\n\nWe have multiple ways of approaching the conflict. We can either continue to fight the £TUR_Neutral_Communism  §YPKK§! on our own territory, and cooperate with our neighbors to combat them and their affiliates, or we can mediate peace talks and grant them their autonomy.\n\n£TUR_Neutral_Communism  §YPKK Strength§! represents the ability for the £TUR_Neutral_Communism  §YPKK Strength§! to conduct attacks against us, our neighbors, and defend itself. If £TUR_Neutral_Communism  §YPKK Strength§! reaches 100%, the conflict will enter Phase II which will result in the loss of our Kurdish territories, and border conflicts with £TUR_Neutral_Communism  §YPKK§! controlled territory!\n\nPKK Strength: §H[?TUR_PKK_strength]%§!\nSelected Base: §H[ROOT.TUR_PKK_bases_name]§!\nSelected Base Strength: §H[ROOT.TUR_PKK_bases_strength]§!"
+ TUR_pkk_insurgency_category_desc: "\n£TUR_desctext_PKK\n\n\n\n\nThe £TUR_Neutral_Communism  §HPKK§! first began their attacks in the late 70's, and ever since, have persisted in their efforts of gaining autonomy or out-right independence from our nation. The £TUR_Neutral_Communism  §YPKK§! have spread their movement to neighboring states, destabilizing our neighbors, and creating a need for closer cooperation.\n\nWe have multiple ways of approaching the conflict. We can either continue to fight the £TUR_Neutral_Communism  §YPKK§! on our own territory, and cooperate with our neighbors to combat them and their affiliates, or we can mediate peace talks and grant them their autonomy.\n\n£TUR_Neutral_Communism  §YPKK Strength§! represents the ability for the £TUR_Neutral_Communism  §YPKK Strength§! to conduct attacks against us, our neighbors, and defend itself. If £TUR_Neutral_Communism  §YPKK Strength§! reaches 100%, the conflict will enter Phase II which will result in the loss of our Kurdish territories, and border conflicts with £TUR_Neutral_Communism  §YPKK§! controlled territory!\n\nPKK Strength: §H[?TUR_PKK_strength]%§!\nSelected Base: §H[ROOT.TUR_PKK_bases_name]§!\nSelected Base Manpower: §H[ROOT.TUR_PKK_bases_strength]§!\nOur Effectiveness: §H[ROOT.TUR_effectiveness_against_base]§!"
+ TUR_van_pre_op_preparations: "Van Pre-Op Evaluation"
+ TUR_van_pre_op_preparations_desc: "The time has come for us to evaluate our effectiveness against the PKK in Van. Based on our evaluation, we will know how much damage we will be able to do against the insurgents."
+ TUR_train_units: "Last Minute Briefing"
+ TUR_train_units_desc: "We can give our units a last minute briefing on the operation, and it's risks.\n§W-----------------------------------------------------------------§!\nThis decision will be §RUNAVAILABLE§! for §H360 Days§! upon activation."
+ TUR_van_pre_op_strike: "Pre-Operation Strikes on Van"
  TUR_PKK_VAN_BASE: "Van"
- TUR_PKK_VAN_BASE_STRENGTH: "[?TUR_VAN_BASE_MANPOWER]"
+ TUR_PKK_VAN_BASE_STRENGTH: "[?TUR_PKK_BASE_MANPOWER]"
+ TUR_PKK_VAN_EFFECTIVENESS: "[?TUR_current_effectiveness]%"
  TUR_PKK_NO_BASE: "N/A"
  TUR_PKK_NO_BASE_STRENGTH: "N/A"
 
@@ -1682,6 +1705,13 @@
  TUR_pkk.4.d: "Delegates from our neighbor, [FROM.GetName], silently left the summit a little while ago. The strange decision is questionable at best, as it raises some concerns within our cabinet about what their intentions really are.."
  TUR_pkk.4.a: "Really?"
 
+ TUR_pkk.100.t: "Pre-Operation Strike on [ROOT.TUR_PKK_bases_name]"
+ TUR_pkk.100.d: "We've reached the stage where we must begin softening the defences of the PKK at the base we are targetting. Currently, PKK movement around [ROOT.TUR_PKK_bases_name] is being mapped out for us to conduct pre-operation strikes on. There is always a chance that things could go wrong, but we should not be too worried about failure if our troops are prepared, and effective."
+ TUR_pkk.100.a: "Launch a coordinated airstrike"
+ TUR_pkk.100.b: "Distrupt their supply lines"
+ TUR_pkk.100.c: "Pepper them with artillery"
+ TUR_pkk.100.d1: "We can sit this one out"
+
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
  Turkey.1.a: "We don't need him"
@@ -2108,6 +2138,7 @@
  #Factions
  anti_imperialist_vanguard_faction: "Anti-Imperialist Vanguard"
  #Misc
+ TUR_VAN_SELECTED_OP: "Van has been selected"
  TUR_northern_cyprus_annexed: "Annexation of Northern Cyprus"
  TUR_VANGUARD: "Vanguard Turkey"
  TUR_VANGUARD_DEF: "Vanguard Turkey"
@@ -2203,7 +2234,7 @@
  investment_propaganda_2: "Unemployment Effort"
  investment_propaganda_2_desc: "Hungry people tend to become criminals. Former governments ignored the eastern regions and didn't cared about the problems that caused the Kurds to feel oppressed. We need to better than the ones before us."
  TUR_military_category: "Turkish Armed Forces"
- TUR_military_category_desc: "The Turkish military has intervened in Turkish politics more than once. Whenever they have felt their own or Turkey's existence threatened, they have organised (or tried to organise) a coup. Quite often this has stemmed from the Turkish government drifting away from secularism, and sometimes from economic troubles seemingly caused by the government.\n\nIf your §YStanding§! with the [TUR.Nat_Autocracy_L] falls below §Y0§!, the Armed Forces will take action to depose the government.\n\nOur current §YStanding§!: [?TUR_military_standing_value|0+]\n\n[?TUR_military_standing_party|=0+] from our current §YRuling Party§!\n[?TUR_military_standing_conservatism|=0+] from £pol_idea §GSocial Conservatism - Government§!\n[?TUR_military_standing_opinion|=0+] from §YThe Military§! Current Opinion\n[?TUR_military_standing_corruption|=0+] from our §YCorruption Level§!\n[?TUR_military_standing_economy|=0+] from our §YEconomic Cycle§!\n[?TUR_military_standing_interest_rate|=0+] from our §YInterest Rate§!"
+ TUR_military_category_desc: "\n£TUR_desctext_TSK\n\n\n\n\nThe Turkish military has intervened in Turkish politics more than once. Whenever they have felt their own or Turkey's existence threatened, they have organised (or tried to organise) a coup. Quite often this has stemmed from the Turkish government drifting away from secularism, and sometimes from economic troubles seemingly caused by the government.\n\nIf your §YStanding§! with the [TUR.Nat_Autocracy_L] falls below §Y0§!, the Armed Forces will take action to depose the government.\n\nOur current §YStanding§!: [?TUR_military_standing_value|0+]\n\n[?TUR_military_standing_party|=0+] from our current §YRuling Party§!\n[?TUR_military_standing_conservatism|=0+] from £pol_idea §GSocial Conservatism - Government§!\n[?TUR_military_standing_opinion|=0+] from §YThe Military§! Current Opinion\n[?TUR_military_standing_corruption|=0+] from our §YCorruption Level§!\n[?TUR_military_standing_economy|=0+] from our §YEconomic Cycle§!\n[?TUR_military_standing_interest_rate|=0+] from our §YInterest Rate§!"
  TUR_hizmet_gulen_struggle: "The Hizmet-AKP Struggle"
  TUR_hizmet_gulen_struggle_desc: "An active power struggle exists between §W[Western_Autocracy_L]§! and the §W[Neutral_Muslim_Brotherhood_L]§!. The Turkish people are split between who they want, as both sides formed a coalition in order to take power in the last election. Both parties are vying for power in Turkey, and they gain more and more power everytime they successfully pass a law or counter one. Eventually things will tip over to one side and the coalition will be dissolved.\n\nCurrently §W[Western_Autocracy_L]§! Control is at §Y[?hizmet_power|%]§!\n\nCurrently §W[Neutral_Muslim_Brotherhood_L]§! Control is at §Y[?akp_power|%]§!"
  TUR_expose_akp_scandal: "Expose AKP Scandals"
