--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -43,7 +43,25 @@
  HOL_NAM_Rotterdam_desc: "Rotterdam, Europe's largest seaport and industrial hub, plays a vital role in the Netherlands' energy landscape. As a major transportation and logistics center, Rotterdam serves as a gateway for crude oil imports, refined product exports, and petrochemical manufacturing. The city's strategic location, extensive infrastructure, and innovative initiatives position it as a key player in the global energy transition."
  HOL_NAM_Pernis_Refineries: "Pernis Refineries"
  HOL_NAM_Pernis_Refineries_desc: "Pernis Refineries, operated by Royal Dutch Shell, form one of the largest refining complexes in Europe, located near Rotterdam. With its advanced facilities and integrated petrochemical plants, Pernis plays a crucial role in processing crude oil into a wide range of refined products, including fuels, lubricants, and chemical feedstocks, supporting the region's energy needs and industrial development."
- #Military
+
+ ### Economy
+ HOL_Regio: "Regional Economy"
+ HOL_Regio_desc: "While the Randstad thrives, it is crucial to ensure the prosperity of the rest of the Netherlands. Investing in the regio will balance economic growth and improve the quality of life across the country."
+ HOL_Dutch_Agriculture: "Dutch Agriculture Investments"
+ HOL_Dutch_Agriculture_desc: "The Netherlands are marked as one of the most efficient agriculture countries and 2nd largest exporter of agriculture products in the World. We need to invest in our sector to stay in the lead of the world"
+ HOL_Plantlab: "Plantlab Creation"
+ HOL_Plantlab_desc: "PlantLab is a Dutch agricultural technology company specializing in vertical farming solutions. By harnessing advanced indoor farming techniques, including hydroponics and LED lighting, PlantLab revolutionizes food production, enabling year-round cultivation of high-quality crops in controlled environments. With a focus on sustainability and resource efficiency, PlantLab contributes to the development of urban agriculture and resilient food systems."
+ HOL_Kringlooplandbouw: ""Kringlooplandbouw"
+ HOL_Kringlooplandbouw_desc: "Smart Dairy Farming leverages digital technologies and data-driven solutions to optimize dairy production processes and improve farm management practices. By incorporating sensors, automation, and predictive analytics, smart dairy farming enhances animal welfare, productivity, and environmental sustainability. With a focus on efficiency and innovation, smart dairy farming enables dairy farmers to make informed decisions and achieve operational excellence in the modern agricultural landscape."
+ HOL_Smart_Dairy_Farming: "Smart Dairy Farming"
+ HOL_Smart_Dairy_Farming_dec: "Smart Dairy Farming leverages digital technologies and data-driven solutions to optimize dairy production processes and improve farm management practices. By incorporating sensors, automation, and predictive analytics, smart dairy farming enhances animal welfare, productivity, and environmental sustainability. With a focus on efficiency and innovation, smart dairy farming enables dairy farmers to make informed decisions and achieve operational excellence in the modern agricultural landscape."
+ HOL_Zero_Dairy_Farming: "Project Zero Emission Dairy Farming"
+ HOL_Zero_Dairy_Farming_desc: "Project Zero Emission Dairy Farming aims to reduce greenhouse gas emissions and environmental impact in dairy production through innovative technologies and sustainable practices. By implementing renewable energy systems, methane capture technologies, and carbon sequestration measures, the project strives to achieve carbon neutrality and promote climate-resilient farming methods. With a commitment to sustainability and stewardship, Project Zero Emission Dairy Farming paves the way for a greener and more sustainable dairy industry."
+ HOL_Digital_Agriculture: "Digital Agriculture Program"
+ HOL_Digital_Agriculture_desc: "The agricultural sector is evolving, and it's time to bring it into the digital age. By implementing the Digital Agriculture Program, we will equip our farmers with cutting-edge technologies, such as precision farming, data analytics, and smart irrigation systems. This initiative aims to increase agricultural efficiency, reduce waste, and promote sustainable farming practices. The future of agriculture is digital, and this program will ensure our farmers lead the way."
+ HOL_Food_Valley: "Holland Food Valley"
+ HOL_Food_Valley_desc: "Holland Food Valley is a leading agri-food innovation cluster in the Netherlands, bringing together businesses, research institutions, and government agencies to drive innovation and collaboration in the food industry. With a focus on research and development, technology transfer, and market access, Holland Food Valley accelerates the development and adoption of innovative food products, processes, and business models, positioning the Netherlands as a global leader in agri-food innovation."
+ ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
  HOL_Commisariaat_Militaire_Productie_tt: "Add §HCommissariaat Militaire Productie§!, which grants ( £tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier: [?0.10|%+] , §YMilitary Factories§! Productivity: [?0.05|%+] , §YDockyards§! Productivity: [?0.05|%+] )"
@@ -169,6 +187,7 @@
  HOL_land_reinforce_rate: "£reinforce_texticon  Reinforce Rate"
  HOL_land_reinforce_rate_tt: "£reinforce_texticon  Reinforce Rate: [?HOL_land_reinforce_rate_change|%+] \n "
  HOL_Change_Army_Spirit_TT: "Modify §HKoninklijke Landmacht§! by \n"
+ HOL_Kringlooplandbouw_modifier: ""Kringlooplandbouw Province"
 ### Events
 HOL_Borsele.t: "Borsele Renovation Plans"
 HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
