Who doesn't love trains?

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -61,6 +61,11 @@
  HOL_Digital_Agriculture_desc: "The agricultural sector is evolving, and it's time to bring it into the digital age. By implementing the Digital Agriculture Program, we will equip our farmers with cutting-edge technologies, such as precision farming, data analytics, and smart irrigation systems. This initiative aims to increase agricultural efficiency, reduce waste, and promote sustainable farming practices. The future of agriculture is digital, and this program will ensure our farmers lead the way."
  HOL_Food_Valley: "Holland Food Valley"
  HOL_Food_Valley_desc: "Holland Food Valley is a leading agri-food innovation cluster in the Netherlands, bringing together businesses, research institutions, and government agencies to drive innovation and collaboration in the food industry. With a focus on research and development, technology transfer, and market access, Holland Food Valley accelerates the development and adoption of innovative food products, processes, and business models, positioning the Netherlands as a global leader in agri-food innovation."
+ HOL_Enpower_Gedeputeerde_Staten: "Enpower Gedeputeerde Staten"
+ HOL_Enpower_Gedeputeerde_Staten_desc: "Increasing the autonomy and resources of regional governments (Gedeputeerde Staten) allows for more tailored and effective local policies."
+ HOL_Lelystad_Airport: "Lelystad Airport Creation"
+ HOL_Lelystad_Airport_desc: "The Lelystad Airport expansion project aims to relieve congestion at Schiphol Airport by increasing capacity and enhancing facilities at Lelystad. This includes extending runways, upgrading terminals, and improving passenger services. The project is expected to boost regional connectivity, tourism, and economic growth in Flevoland and surrounding areas."
+ HOL_Lelystad_Airport_tt: "§HOost-Nederland§! Receives §H40 Productivity§!"
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
@@ -188,8 +193,47 @@
  HOL_land_reinforce_rate_tt: "£reinforce_texticon  Reinforce Rate: [?HOL_land_reinforce_rate_change|%+] \n "
  HOL_Change_Army_Spirit_TT: "Modify §HKoninklijke Landmacht§! by \n"
  HOL_Kringlooplandbouw_modifier: ""Kringlooplandbouw Province"
-### Events
-HOL_Borsele.t: "Borsele Renovation Plans"
-HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
-HOL_Borsele.a: "Go Nuclear"
-HOL_Borsele.b: "Shiny Coal Plant"
+ ### Events
+ HOL_Borsele.t: "Borsele Renovation Plans"
+ HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
+ HOL_Borsele.a: "Go Nuclear"
+ HOL_Borsele.b: "Shiny Coal Plant"
+ HOL.Provincial_Railways.101.t: "Netherlands Propose Wunderline Railway"
+ HOL.Provincial_Railways.101.d:  "The Netherlands has put forward an ambitious proposal to develop the Wunderline railway, a state-of-the-art cross-border connection aimed at enhancing regional connectivity between the two nations. This project, envisioned as a cornerstone of future economic cooperation, would modernize existing infrastructure, improve travel times, and bolster the relationship between the Netherlands and Germany. The proposal reflects the Netherlands' commitment to advancing its transportation network and fostering stronger ties with its neighbors."
+ HOL.Provincial_Railways.101.a: "Wunderbar!"
+ HOL.Provincial_Railways.101.b: "No we stick with rusty trains"
+ HOL.Provincial_Railways.102.t: "Germany Doesn't Want a Wunderline"
+ HOL.Provincial_Railways.102.d: "Despite the Netherlands' diplomatic efforts and the potential benefits of the Wunderline railway, Germany has decided not to support the project. This rejection poses a significant setback to the Netherlands' vision of a more interconnected Europe. With Germany’s refusal, the future of the Wunderline hangs in the balance. The Netherlands must now decide whether to proceed with a scaled-down version of the project, focusing on connecting to Groningen, or to abandon the plan entirely, acknowledging the limitations of regional cooperation."
+ HOL.Provincial_Railways.102.a: "Build Railway to Groningen atleast"
+ HOL.Provincial_Railways.102.b: "Scrap The Plan"
+ HOL.Provincial_Railways.201.t: "Netherlands Propose HSL-Oost Integration"
+ HOL.Provincial_Railways.201.d: "In a bid to further integrate European transportation networks, the Netherlands has proposed the integration of the HSL-Oost high-speed railway into Germany's existing infrastructure. This initiative aims to create a seamless, fast connection between the two countries, potentially revolutionizing travel and economic interactions across the border. If successful, this project could not only enhance the efficiency of cross-border transportation but also strengthen the economic ties and cooperation between the Netherlands and Germany, making it a key milestone in European integration."
+ HOL.Provincial_Railways.201.a: "High-Speed to Weed"
+ HOL.Provincial_Railways.201.b: "We don't drive high-speed anyway"
+ HOL.Provincial_Railways.306.t: "Germany Rejects HSL-Oost Integration"
+ HOL.Provincial_Railways.306.d: "Germany has declined the Netherlands' proposal to integrate the HSL-Oost high-speed railway into its network, dealing a blow to the vision of a unified high-speed rail system between the two nations. This decision forces the Netherlands to reconsider its strategy. With the German rejection, the options now include continuing the development of the HSL-Oost within Dutch borders, potentially extending only to Arnhem, or scrapping the project altogether. This decision will significantly impact the future of high-speed rail travel in the region and the Netherlands' role in European transportation."
+ HOL.Provincial_Railways.306.a: "Build HSL-Oost to Arnhem"
+ HOL.Provincial_Railways.306.b: "Scrap The Plan"
+ HOL.Provincial_Railways.301.t: "Netherlands suggest Three-Country Route with Belgium"
+ HOL.Provincial_Railways.301.d: "The Netherlands has taken a bold step by proposing a new Three-Country Route, an ambitious rail project intended to connect the Netherlands, Belgium, and Germany through a comprehensive rail network. This project is seen as a potential game-changer for cross-border transportation, with the promise of enhancing trade, travel, and economic integration among the three nations. The proposal underscores the Netherlands' commitment to strengthening European unity and improving regional infrastructure. However, the success of this project hinges on the cooperation and support of Belgium and Germany."
+ HOL.Provincial_Railways.301.a: "What can go wrong? Great Idea!"
+ HOL.Provincial_Railways.301.b: "Blegium need to fix it roads first"
+ HOL.Provincial_Railways.302.t: "Netherlands & Germany suggest Three-Country Route"
+ HOL.Provincial_Railways.302.d: "The Netherlands, in collaboration with Germany, has moved forward with the proposal to develop the Three-Country Route. This project aims to establish a seamless rail connection between the Netherlands, Germany, and Belgium, creating a new corridor for transportation and economic exchange in Europe. The joint effort between the Netherlands and Germany reflects a shared vision for a more interconnected Europe. Now, the final piece of the puzzle lies in Belgium's hands, as their agreement is crucial for the project's realization. The outcome will determine whether this ambitious plan will come to fruition."
+ HOL.Provincial_Railways.302.a: "Rails Above Roads!"
+ HOL.Provincial_Railways.302.b: "We don't like spending money"
+ HOL.Provincial_Railways.304.t: "Belgium & Germany Accepting Three-Country Route"
+ HOL.Provincial_Railways.304.d: "In a landmark decision, both Belgium and Germany have agreed to participate in the development of the Three-Country Route, marking a significant achievement in European transportation cooperation. This agreement paves the way for the construction of a new rail corridor that will enhance connectivity, reduce travel times, and strengthen economic ties among the three nations. The successful negotiation of this project is a testament to the commitment of the Netherlands, Belgium, and Germany to work together towards a more integrated and prosperous Europe. This rail project is set to become a milestone in the history of European infrastructure."
+ HOL.Provincial_Railways.304.a: "European Milestone for Railtraffic!"
+ HOL.Provincial_Railways.303.t: "Netherlands propose Two-Country Train"
+ HOL.Provincial_Railways.303.d: "Following Germany's rejection of the Three-Country Route, the Netherlands has proposed an alternative solution: the Two-Country Train, designed to link the Netherlands and Belgium directly. While this new proposal lacks the broader scope of the original plan, it still offers significant benefits by improving bilateral relations and enhancing regional transportation. The success of this alternative will depend on Belgium's willingness to cooperate and invest in the project. The Netherlands remains committed to advancing its transportation infrastructure, even if on a smaller scale."
+ HOL.Provincial_Railways.303.a: "Work with Netherlands to Develop Two Country route"
+ HOL.Provincial_Railways.303.b: "We already have the best railways"
+ HOL.Provincial_Railways.305.t: "Only Belgium Agrees Three-Country Route"
+ HOL.Provincial_Railways.305.d: "Although Germany has declined to participate, Belgium has expressed its willingness to move forward with the Three-Country Route project. This partial agreement leaves the Netherlands with a challenging decision: whether to proceed with the project alongside Belgium, albeit on a reduced scale, or to reconsider the entire plan. The absence of Germany complicates the project but does not diminish its potential impact on regional connectivity. The Netherlands must now weigh the benefits of collaboration with Belgium against the challenges of proceeding without full international support."
+ HOL.Provincial_Railways.305.a: "Okay... I suppose"
+ HOL.Provincial_Railways.306.t: "Belgium & Germany Rejects Three-Country Route"
+ HOL.Provincial_Railways.306.d: "In a disappointing turn of events, both Belgium and Germany have rejected the proposal for the Three-Country Route, effectively halting the Netherlands' vision of a comprehensive cross-border rail network. This rejection is a significant setback, forcing the Netherlands to reevaluate its transportation strategy. With the original plan no longer viable, the focus must shift to alternative options, such as improving existing routes within Dutch borders or reallocating resources to other national projects. The outcome highlights the challenges of international cooperation and the complexities of regional infrastructure development."
+ HOL.Provincial_Railways.306.a: "Only Reconstruct Maastricht Station"
+ HOL.Provincial_Railways.306.b: "Use Funds to invest in the Amsterdam - Maastricht Line"
+ HOL.Provincial_Railways.306.c: "They really hate reliable trains"
